@@ -29,7 +29,6 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
-import java.util.Collections;
 import java.util.List;
 
 import jdk.jfr.AnnotationElement;
@@ -58,17 +57,17 @@ public final class AnnotationConstruct {
         }
     }
 
-    private List<AnnotationElement> annotationElements = Collections.emptyList();
+    private List<AnnotationElement> annotationElements = List.of();
     private byte unsignedFlag = -1;
     public AnnotationConstruct(List<AnnotationElement> ann) {
-        this.annotationElements = ann;
+        this.annotationElements = List.copyOf(ann);
     }
 
     public AnnotationConstruct() {
     }
 
     public void setAnnotationElements(List<AnnotationElement> elements) {
-        annotationElements = Utils.smallUnmodifiable(elements);
+        annotationElements = List.copyOf(elements);
     }
 
     public String getLabel() {
